--- a/charts/merlin/templates/gitlab-secret.yaml
+++ b/charts/merlin/templates/gitlab-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.merlin.alert.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -19,3 +20,4 @@ metadata:
 type: Opaque
 stringData:
   gitlab-token: {{ .Values.merlin.gitlab.token }}
+{{- end }}
