Prepare helm chart for e2e test

--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -16,8 +16,9 @@ merlin:
     externalPort: 8080
     internalPort: 3000
   ingress:
-    enabled: true
-    class: nginx
+    enabled: false
+  mlpApi:
+    encryptionKey: password
   sentry:
     enabled: false
   newrelic:
