--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -24,7 +24,7 @@ merlin:
   docsURL: ""
 
   mlpApi:
-    apiHost: http://mlp.mlp/v1
+    apiHost: http://mlp.mlp:8080/v1
     # encryptionKey must be specified using --set flag.
     # encryptionKey:
 
