--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,22 @@ jobs:
       - name: Build API server
         run: make build-api
 
+  unit-test-python-sdk:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      working-directory: ./python/sdk
+      run: |
+        pip install mypy pipenv
+        make setup
+    - name: Unit test Python SDK
+      working-directory: ./python/sdk
+      run: make unit-test
+
   integration-test-api:
     runs-on: ubuntu-latest
     services:
