--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         make setup
     - name: Unit test Python SDK
       env:
-        E2E_USE_GOOGLE_AUTH: false
+        E2E_USE_GOOGLE_OAUTH: false
       working-directory: ./python/sdk
       run: make unit-test
 
