Update requirements for generating docs

--- a/python/sdk/docs/requirements_docs.txt
+++ b/python/sdk/docs/requirements_docs.txt
@@ -10,3 +10,14 @@ nbsphinx-link>=1.2.0
 ipykernel>=5.1.0
 ipython>=7.2.0
 ipypublish
+certifi>=2017.4.17
+python-dateutil>=2.1
+six>=1.10
+mlflow>=1.2.0
+google-cloud-storage>=1.19.0
+urllib3>=1.23
+PyPrind>=2.11.2
+google-auth>=1.11.0,<2.0dev
+Click>=7.0
+cloudpickle==1.2.2
+cookiecutter>=1.7.0
