Add missing dependencies for S3

--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -55,6 +55,7 @@ mlflow:
     # MinIO credentials
     AWS_ACCESS_KEY_ID: YOURACCESSKEY
     AWS_SECRET_ACCESS_KEY: YOURSECRETKEY
+    MLFLOW_S3_ENDPOINT_URL: http://minio.minio:9000
 
 swagger:
   enabled: false
