--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -24,6 +24,33 @@ merlin:
   authorization:
     enabled: false
 
+  environmentConfigs:
+  - name: e2e
+    is_default: true
+    cluster: e2e
+    region: id
+    gcp_project: gcp-project
+    deployment_timeout: 10m
+    namespace_timeout: 2m
+    min_replica: 1
+    max_replica: 1
+    max_cpu: 1
+    max_memory: 1Gi
+    cpu_request: 25m
+    memory_request: 128Mi
+    cpu_limit: 250m
+    memory_limit: 256Mi
+    queue_resource_percentage: 20
+    is_prediction_job_enabled: true
+    is_default_prediction_job: true
+    prediction_job_config:
+      executor_replica: 1
+      driver_cpu_request: 25m
+      driver_memory_request: 128Mi
+      executor_cpu_request: 25m
+      executor_memory_request: 128Mi
+
+
 postgresql:
   resources:
     requests:
