--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,20 +189,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish-merlin-docker
     steps:
-      - uses: actions/checkout@v2
-        with:
-          path: merlin
-      - uses: actions/checkout@master
-        with:
-          repository: gojek/mlp
-          ref: main
-          token: ${{ secrets.DSP_REPO_TOKEN }}
-          path: mlp
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.13
-      # TODO: To be removed after github.com/gojek/mlp published
-      - run: git config --global url."https://${{ secrets.DSP_REPO_TOKEN }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+    - uses: actions/checkout@v2
+      with:
+        path: merlin
+    - uses: actions/checkout@master
+      with:
+        repository: gojek/mlp
+        ref: main
+        token: ${{ secrets.DSP_REPO_TOKEN }}
+        path: mlp
+    - uses: actions/setup-go@v2
+      with:
+        go-version: 1.13
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    # TODO: To be removed after github.com/gojek/mlp published
+    - run: git config --global url."https://${{ secrets.DSP_REPO_TOKEN }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
 
     - name: Setup cluster
       run: ./merlin/scripts/e2e/setup-cluster.sh
