--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -4,7 +4,7 @@ merlin:
     tag: 0.7.0
   # TODO: After the Merlin docker image got published, we can remove imagePullSecrets config
   imagePullSecrets:
-  - name: regcred
+  - name: ghcr-secret
   replicaCount: 1
   resources:
     requests:
@@ -75,7 +75,7 @@ postgresql:
 mlflow:
   # TODO: After the MLflow docker image got published, we can remove imagePullSecrets config
   imagePullSecrets:
-  - name: regcred
+  - name: ghcr-secret
   postgresql:
     enabled: false
     postgresqlDatabase: mlflow
