Add first E2E test (#1)
* Publish docker images for e2e test

* Fallback to HTTP default client for MLP API client

Previously, we create a Google HTTP client from Google default credential to be used whenever we call MLP API. This commit make this requirement optional. User can use default HTTP client. Please not the request maybe fail if MLP API enables its auth.

* Prepare helm chart for e2e test

* Update mlp api host

* Rework python-sdk Pipfile

* Add unit test for python sdk

* Add use_google_oauth arg to set_url

* Update merlin_test, set_url to disable use_google_oauth

* Make use_google_oauth as fixture

* Fix typo on E2E_USE_GOOGLE_OAUTH

* use_google_auth should return bool

* Add use_google_oauth fixture to remaining tests

* Fix integration_test_url

* Disable testing download artifact

* Add missing dependencies for S3

* Update ingress template

* Add e2e that run Golan client examples

* Fix path to merlin e2e dir

* Add setup-cluster.sh

* Setup python. Remove environment.yaml from dockerfile, it should be specified at the runtime

* Set cluster name for image builder

* Use bash shell for e2e scripts

* Port-forward mlp svc as well to create project

* Rename project for e2e

* Make cli_integration_test fixtures configurable from env var

* Set model type for cli test

* Set merlin-sdk in pyfunc-server setup.py

* Make e2e batch source and sink configurable from env var

* Make e2e batch gcs staging bucket configurable from env var

* Tag pyspark-base docker with dev for local development

* Rename regcred to ghcr-secret

* Set image pull secret

* Rebase main

* Add env vars for image builder context sub path

* Remove comment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,24 @@ jobs:
       - name: Build API server
         run: make build-api
 
+  unit-test-python-sdk:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      working-directory: ./python/sdk
+      run: |
+        pip install mypy pipenv
+        make setup
+    - name: Unit test Python SDK
+      env:
+        E2E_USE_GOOGLE_OAUTH: false
+      working-directory: ./python/sdk
+      run: make unit-test
+
   integration-test-api:
     runs-on: ubuntu-latest
     services:
@@ -104,7 +122,6 @@ jobs:
           twine upload dist/*
 
   publish-merlin-docker:
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     needs: integration-test-api
     steps:
@@ -119,7 +136,6 @@ jobs:
           tag_with_ref: true
 
   publish-pyfunc-base-docker:
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -132,10 +148,10 @@ jobs:
           repository: gojek/merlin-pyfunc-base
           path: python/pyfunc-server
           dockerfile: python/pyfunc-server/base.Dockerfile
+          tags: dev
           tag_with_ref: true
 
   publish-pyspark-base-docker:
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -151,7 +167,6 @@ jobs:
           tag_with_ref: true
 
   publish-mlflow-docker:
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -166,3 +181,45 @@ jobs:
           dockerfile: mlflow/Dockerfile
           build_args: MLFLOW_VERSION=1.3.0
           tags: 1.3.0
+
+  e2e-test:
+    runs-on: ubuntu-latest
+    needs: publish-merlin-docker
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          path: merlin
+      - uses: actions/checkout@master
+        with:
+          repository: gojek/mlp
+          ref: main
+          token: ${{ secrets.DSP_REPO_TOKEN }}
+          path: mlp
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.13
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      # TODO: To be removed after github.com/gojek/mlp published
+      - run: git config --global url."https://${{ secrets.DSP_REPO_TOKEN }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+
+      - name: Setup cluster
+        run: ./merlin/scripts/e2e/setup-cluster.sh
+      - name: Setup mlp namespace
+        run: |
+          kubectl create namespace mlp
+          kubectl create secret generic vault-secret --namespace=mlp --from-literal=address=http://vault.vault.svc.cluster.local --from-literal=token=root
+          # TODO: After the MLP docker image got published, we can remove creating docker credential secret
+          kubectl create secret docker-registry ghcr-secret --namespace=mlp --docker-server=ghcr.io --docker-email=ariefrahmansyah@hotmail.com --docker-username=ariefrahmansyah --docker-password=${{ secrets.GHCR_TOKEN }}
+      - name: Deploy MLP
+        run: |
+          helm install mlp mlp/chart --namespace=mlp \
+            --values=mlp/chart/values-e2e.yaml \
+            --set mlp.image.tag=main \
+            --set "mlp.imagePullSecrets[0].name"=ghcr-secret \
+            --wait --timeout=5m
+      - name: Deploy Merlin
+        run: ./merlin/scripts/e2e/deploy-merlin.sh "merlin/charts/merlin"
+      - name: Run E2E test
+        run: ./merlin/scripts/e2e/run-e2e.sh "merlin/api"
