--- a/charts/mlflow/templates/deployment.yaml
+++ b/charts/mlflow/templates/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "mlflow.fullname" . }}
@@ -67,6 +67,16 @@ spec:
           value: "{{ .Values.host }}"
         - name: PORT
           value: "{{ .Values.service.internalPort }}"
+        {{- range $key, $val := .Values.extraEnvs }}
+        - name: {{ $key }}
+          value: {{ $val | quote }}
+        {{- end}}
+
+{{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+{{ toYaml .Values.imagePullSecrets | indent 6 }}
+{{- end }}
+
 {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
